# bazel

./: BUILD  README  WORKSPACE  bazel-bazel  bazel-bin  bazel-out  bazel-testlogs  deps.bzl  flake.nix  go.mod  go.sum
proto/app1/: BUILD.bazel
proto/main/: BUILD.bazel  pingpong.proto
src/: BUILD  main.go
src/a/: BUILD.bazel  a.go
src/app1/: BUILD.bazel  app.go  app_test.go  main.go
src/app1/cmd/: BUILD.bazel  serve.go
src/app1/main/: BUILD.bazel  main.go
