load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pingpong_proto",
    srcs = ["pingpong.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pingpong_go_proto",
    importpath = "github.com/newcl/bazel/proto/main",
    proto = ":pingpong_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "main",
    embed = [":pingpong_go_proto"],
    importpath = "github.com/newcl/bazel/proto/main",
    visibility = ["//visibility:public"],
)
