load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "app1_lib",
    srcs = ["app.go"],
    importpath = "github.com/newcl/bazel/src/app1",
    visibility = ["//visibility:private"],
)

go_test(
    name = "app1_test",
    srcs = ["app_test.go"],
    embed = [":app1"],
)
