load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

#load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")


go_image(
    name = "app1_image",
    embed = ["//src/app1/main:main_lib"],
     goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_image(
    name = "app1_docker_image",
    base = ":app1_image",
)

go_library(
    name = "app1",
    srcs = ["app.go"],
    importpath = "github.com/newcl/bazel/src/app1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "app1_test",
    srcs = ["app_test.go"],
    embed = [":app1"],
    deps = ["@com_github_stretchr_testify//assert"],
)
